# bls12-381-evm-heaven

./: .gitignore  .gitmodules  Cargo.toml  README.md
bls12381-groth16/: README.md
bls12381-groth16/circom/: README.md  fib.circom  vk.sh
bls12381-groth16/circom/docker/: Dockerfile  entrypoint.sh  generate_proof_calldata.py  process_verification_key.py  prove.sh  vk.sh
bls12381-groth16/node/: package-lock.json  package.json  render.js  scratch.js
bls12381-groth16/script/python/: process_verification_key.py  proof.json  verification_key.json  verification_key_processed.json
bls12381-groth16/src/: Groth16VerifierBLS12381.sol  Groth16VerifierBLS12381.sol.ejs  Groth16VerifierBLS12381RESULT.sol  Groth16VerifierBLS12381_2.sol
bls12381-groth16/src/interfaces/: IGroth16VerifierBLS12381.sol
bls12381-groth16/test/: Groth16VerifierBLS12381.t.sol  Groth16VerifierBLS12381_2.sol
bls12381-lib/: RAMBLE.md  README.md  foundry.toml
bls12381-lib/src/: BLS12381Lib.sol
bls12381-lib/test/: BLS12381Lib.t.sol  RFC9380.t.sol
noir_r1cs/: Cargo.toml  circuit.json
noir_r1cs/src/: main.rs
pectra-playground/: README.md  foundry.toml
pectra-playground/src/: BLS12381Calculator.sol  BLS12381Lib.sol
pectra-playground/test/: BLS12381Calculator.t.sol  BLS12381Lib.t.sol
validate-beacon-sig-on-chain-poc/: .gitignore  README.md  setup.sh
validate-beacon-sig-on-chain-poc/script/data/: 11046320.json  11046320_attestations.json  validators_11046320_0.json
validate-beacon-sig-on-chain-poc/script/python/: get_validators_pks.py  list_eth2spec_modules.py  process_beacon_slot.py  (+1 more)
(+2 files in other folders)
