[package]
name = "noir_r1cs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm = { git = "https://github.com/noir-lang/noir.git", package = "acvm", branch = "master" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", package = "noirc_driver", branch = "master" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir.git", package = "noirc_artifacts", branch = "master" }
acir_field = { git = "https://github.com/noir-lang/noir.git", package = "acir_field", branch = "master" }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [ "curve" ] }
serde_json = "1.0.135"
serde = "1.0.217"
ark-ff = "0.5.0"
ark-relations = "0.5.1"
